<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">now</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome_to_event">Welcome to nota!</string>
    <string name="event">event</string>
    <string name="now_header">enjoy now</string>
    <string name="action_settings">settings</string>
    <string name="action_edit">edit</string>
    <string name="action_done">done</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="end">end</string>
    <string name="start_event">start event</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_nota">NotaActivity</string>

    <string name="empty_nota_list">No Information Available</string>

    <!-- nota detail label-->
    <string name="label_subject">subject</string>
    <string name="label_note">note</string>
    <string name="label_start">start</string>
    <string name="label_end">end</string>
    <string name="label_duration">duration</string>
    <string name="label_latitude">latitude</string>
    <string name="label_longitude">longitude</string>
    <string name="label_category">category</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="clear_world">Clear world!</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- navigation drawer -->
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_play">Play Activity</string>


    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
</resources>
